<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/green13"
    android:minHeight="@dimen/widget_min_height"
    android:minWidth="@dimen/widget_min_width"
    android:orientation="horizontal"
    android:paddingEnd="@dimen/abc_action_bar_default_padding_material"
    android:paddingLeft="@dimen/abc_action_bar_default_padding_material"
    android:paddingRight="@dimen/abc_action_bar_default_padding_material"
    android:paddingStart="@dimen/abc_action_bar_default_padding_material"
    android:paddingTop="@dimen/abc_action_bar_default_padding_material">

    <TextView
        android:id="@+id/widget_date_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/abc_control_padding_material"
        android:gravity="center"
        android:text="@string/widget_date_text"
        android:textColor="@color/primary_dark_material_dark" />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:id="@+id/info_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_date_textview"
        android:layout_toEndOf="@+id/app_logo"
        android:layout_toRightOf="@+id/app_logo"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/widget_away_home_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/abc_action_bar_default_padding_material"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/widget_away_text"
                android:textColor="@color/primary_dark_material_dark"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/widget_home_text"
                android:textColor="@color/primary_dark_material_dark"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/widget_team_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/abc_action_bar_default_padding_material"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/widget_away_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/widget_away_team_text"
                android:textColor="@color/primary_dark_material_dark" />

            <TextView
                android:id="@+id/widget_home_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/widget_home_team_text"
                android:textColor="@color/primary_dark_material_dark" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/widget_scores">

            <TextView
                android:id="@+id/widget_away_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/widget_away_scores_text"
                android:textColor="@color/primary_dark_material_dark" />

            <TextView
                android:id="@+id/widget_home_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/widget_home_scores_text"
                android:textColor="@color/primary_dark_material_dark" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>