<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/appwidget_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green13"
    android:gravity="center"
    android:minHeight="@dimen/widget_min_height"
    android:orientation="vertical"
    android:paddingEnd="@dimen/abc_action_bar_default_padding_material"
    android:paddingLeft="@dimen/abc_action_bar_default_padding_material"
    android:paddingRight="@dimen/abc_action_bar_default_padding_material"
    android:paddingStart="@dimen/abc_action_bar_default_padding_material"
    android:paddingTop="@dimen/abc_action_bar_default_padding_material">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/widget_result">

        <TextView
            android:id="@+id/widget_date_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/abc_control_padding_material"
            android:background="@color/red13"
            android:gravity="center_horizontal"
            android:text="@string/widget_date_text"
            android:textColor="@color/primary_dark_material_dark" />

        <LinearLayout
            android:id="@+id/info_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/widget_away_home_titles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/abc_action_bar_default_padding_material"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/widget_away_text"
                    android:textColor="@color/primary_dark_material_dark"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/widget_home_text"
                    android:textColor="@color/primary_dark_material_dark"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/widget_team_names"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/abc_action_bar_default_padding_material"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/widget_away_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/widget_away_team_text"
                    android:textColor="@color/primary_dark_material_dark" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/widget_home_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/widget_home_team_text"
                    android:textColor="@color/primary_dark_material_dark" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/widget_scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/widget_away_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/widget_away_scores_text"
                    android:textColor="@color/primary_dark_material_dark" />

                <TextView
                    android:id="@+id/widget_home_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/widget_home_scores_text"
                    android:textColor="@color/primary_dark_material_dark" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>